--- a/public/styles.css
+++ b/public/styles.css
@@ -35,6 +35,8 @@ header > div {
 }
 
 header > ul { margin-left:auto;}
+#container { padding:1em; }
+
 
 @media (max-width: 300px) {
 
@@ -49,14 +51,10 @@ header > ul { margin-left:auto;}
     font-size:xx-large;
   }
   
-  .mid-calendar-component {
-    margin-left:1em;
-    margin-right:1em;
-  }
-
   .rbc-calendar {
     min-height:600px;
   }
+
 }
 
 ul > li { padding-right:0.50em; }
